Fix z-index issue on RunPage

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -8,7 +8,7 @@
     left: 0;
     position: absolute;
     top: 0;
-    transition: opacity 0.2s;
+    transition: opacity 0.1s;
     width: 100%;
 
     .modal-overlay {
@@ -25,7 +25,7 @@
         border-radius: 15px;
         max-width: constants.$max-width;
         padding: 2rem;
-        z-index: 100;
+        z-index: 1000;
     }
 }
 
