--- a/src/components/RunEntry/RunEntry.module.scss
+++ b/src/components/RunEntry/RunEntry.module.scss
@@ -27,6 +27,7 @@
         position: relative;
         transition: transform 0.3s;
         width: var(--icon-size);
+        z-index: 0;
     }
 }
 
